--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
       --azul1:#0e4d7d;
       --azul2:#06233f;
 
-      --ink:#06243f;
-      --stroke: rgba(255,255,255,.28);
-
-      --shadow: 0 18px 55px rgba(0,0,0,.16);
-      --shadow2: 0 10px 28px rgba(0,0,0,.12);
+      --stroke: rgba(255,255,255,.22);
+      --shadow: 0 22px 62px rgba(0,0,0,.26);
+      --shadow2: 0 14px 30px rgba(0,0,0,.20);
     }
 
     *{ box-sizing:border-box; }
@@ -29,33 +27,43 @@
       overflow: hidden !important;
     }
 
+    /* ===========================
+       FUNDO PROFISSIONAL + LOGO MAIS VISÍVEL
+       =========================== */
     body{
       font-family: Arial, sans-serif;
-      color: var(--ink);
-      background: linear-gradient(90deg, var(--verde1) 0%, var(--verde2) 22%, var(--azul1) 70%, var(--azul2) 100%);
+      color: #fff;
+      background: linear-gradient(135deg, #69ff9f 0%, #2be28d 18%, #0e4d7d 65%, #06233f 100%);
       position: relative;
     }
 
-    /* ✅ LOGO NO FUNDO (AGORA VISÍVEL) */
+    /* logo fundo mais visível e profissional */
     body::before{
       content:"";
       position: absolute;
       inset: 0;
 
-      /* ✅ Ajustado para aparecer bem */
-      background: url("logo/sesctopo.png") center center / 700px no-repeat;
-
-      /* ✅ aumentei bastante para ficar visível */
+      background: url("logo/sesctopo.png") center 58% / 850px no-repeat;
       opacity: 0.22;
 
       pointer-events:none;
       z-index:0;
 
-      /* ✅ realce do logo */
-      filter: contrast(1.3) brightness(1.08);
-
-      /* ✅ efeito excelente para “marca d’água” */
+      filter: contrast(1.25) brightness(1.1);
       mix-blend-mode: screen;
+    }
+
+    /* camada extra escura para dar cara “premium” */
+    body::after{
+      content:"";
+      position:absolute;
+      inset:0;
+      background:
+        radial-gradient(circle at 15% 20%, rgba(255,255,255,.18), transparent 40%),
+        radial-gradient(circle at 85% 75%, rgba(115,255,154,.10), transparent 38%),
+        linear-gradient(180deg, rgba(0,0,0,.25), rgba(0,0,0,.28));
+      pointer-events:none;
+      z-index:0;
     }
 
     header, main{ position:relative; z-index:1; }
@@ -69,42 +77,84 @@
       gap: 12px;
     }
 
+    /* ===========================
+       HEADER MAIS PROFISSIONAL
+       =========================== */
     header{
       flex: 0 0 auto;
       display:flex;
       align-items:center;
-      justify-content:flex-start;
-      padding-bottom: 4px;
+      justify-content:space-between;
+      gap:16px;
+      padding-bottom: 6px;
     }
 
+    /* título branco */
     .sysOnly{
       margin:0;
       display:flex;
       align-items:baseline;
       gap:12px;
       flex-wrap:wrap;
+
       font-weight:900;
-      letter-spacing:.8px;
+      letter-spacing:.9px;
       text-transform:uppercase;
-      color: #06243f;
-      text-shadow: 0 16px 32px rgba(0,0,0,.10);
-      width: 100%;
-      justify-content:flex-start;
+
+      color:#fff;
+      text-shadow: 0 18px 38px rgba(0,0,0,.35);
     }
 
     .sysOnly .t1{ font-size: 28px; }
     .sysOnly .dot{
       font-size: 22px;
-      opacity: .75;
+      opacity: .85;
       transform: translateY(-2px);
     }
     .sysOnly .t2{
       font-size: 30px;
       padding: 4px 12px;
       border-radius: 999px;
-      background: rgba(255,255,255,.22);
-      border: 1px solid rgba(6,36,63,.18);
-      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+      background: rgba(255,255,255,.14);
+      border: 1px solid rgba(255,255,255,.18);
+      box-shadow: 0 14px 28px rgba(0,0,0,.18);
+    }
+
+    /* ===========================
+       CARD DEV (MARCOS PONTES)
+       =========================== */
+    .devCard{
+      display:flex;
+      flex-direction:column;
+      align-items:flex-end;
+      gap:2px;
+
+      padding: 10px 14px;
+      border-radius: 16px;
+
+      background: rgba(255,255,255,.12);
+      border: 1px solid rgba(255,255,255,.22);
+      backdrop-filter: blur(10px);
+      -webkit-backdrop-filter: blur(10px);
+
+      box-shadow: 0 18px 38px rgba(0,0,0,.22);
+      user-select:none;
+    }
+
+    .devCard .nome{
+      font-size: 13px;
+      font-weight: 900;
+      letter-spacing: .8px;
+      color:#fff;
+      text-transform:uppercase;
+    }
+
+    .devCard .cargo{
+      font-size: 11px;
+      font-weight: 700;
+      letter-spacing: .8px;
+      color: rgba(255,255,255,.80);
+      text-transform:uppercase;
     }
 
     main{
@@ -115,15 +165,18 @@
       min-height: 0;
     }
 
+    /* ===========================
+       CARD PRINCIPAL (GLASS)
+       =========================== */
     .glass{
       width: 980px;
-      height: 760px;
-      border-radius: 32px;
+      height: 740px;
+      border-radius: 34px;
       border: 1px solid var(--stroke);
-      background: linear-gradient(180deg, rgba(255,255,255,.18), rgba(255,255,255,.08));
+      background: linear-gradient(180deg, rgba(255,255,255,.14), rgba(255,255,255,.06));
       box-shadow: var(--shadow);
-      backdrop-filter: blur(12px);
-      -webkit-backdrop-filter: blur(12px);
+      backdrop-filter: blur(14px);
+      -webkit-backdrop-filter: blur(14px);
       overflow: hidden;
       display:flex;
     }
@@ -142,56 +195,75 @@
       font-size: 30px;
       font-weight: 900;
       letter-spacing: 1px;
-      color: var(--ink);
       text-transform: uppercase;
+      color:#fff;
+      text-shadow: 0 12px 28px rgba(0,0,0,.35);
     }
 
+    /* ===========================
+       GUIA DE SIGLAS
+       =========================== */
     .guideLine{
       padding: 14px 16px;
       border-radius: 20px;
-      border: 1px solid rgba(255,255,255,.32);
-      background: rgba(255,255,255,.20);
+      border: 1px solid rgba(255,255,255,.18);
+      background: rgba(255,255,255,.10);
       box-shadow: var(--shadow2);
       display:flex;
       align-items:center;
       flex-wrap:wrap;
       gap: 12px;
       font-weight: 900;
-      color: rgba(6,36,63,.92);
+      color: rgba(255,255,255,.92);
       letter-spacing: .7px;
       flex: 0 0 auto;
     }
+
     .guideLine .tag{
       padding: 7px 12px;
       border-radius: 999px;
-      border: 1px solid rgba(6,36,63,.18);
-      background: rgba(255,255,255,.18);
+      border: 1px solid rgba(255,255,255,.16);
+      background: rgba(0,0,0,.12);
       box-shadow: 0 10px 20px rgba(0,0,0,.08);
       white-space: nowrap;
+      color:#fff;
     }
+
     .guideLine .sep{
       opacity: .55;
       font-weight: 900;
+      color: rgba(255,255,255,.75);
     }
 
+    /* ===========================
+       ÁREA DE DIGITAÇÃO MENOR
+       =========================== */
     textarea{
       width:100%;
-      flex: 1 1 auto;
-      min-height: 0;
+      flex: 0 0 auto;
+      height: 240px;
+      min-height: 240px;
+
       resize: none;
       border-radius: 22px;
-      border: 1px solid rgba(255,255,255,.34);
-      background: rgba(255,255,255,.16);
-      box-shadow: var(--shadow2);
+      border: 1px solid rgba(255,255,255,.22);
+
+      background: rgba(0,0,0,.18);
+      box-shadow: 0 16px 32px rgba(0,0,0,.18);
+
       padding: 18px;
       outline:none;
       font-size: 17px;
-      color: var(--ink);
+      color: #fff;
       line-height: 1.35;
       overflow: auto;
     }
-    textarea::placeholder{ color: rgba(6,36,63,.55); }
 
+    textarea::placeholder{ color: rgba(255,255,255,.65); }
+
+    /* ===========================
+       BOTÃO
+       =========================== */
     .btn{
       width:100%;
       border:none;
@@ -201,13 +273,15 @@
       font-size: 22px;
       font-weight: 900;
       letter-spacing: .3px;
-      color:#fff;
-      background: linear-gradient(90deg, #0d3a66, #06243f);
-      box-shadow: 0 22px 38px rgba(6,36,63,.25);
+      color:#041b2f;
+
+      background: linear-gradient(90deg, #00e09c, #1376b8);
+      box-shadow: 0 22px 42px rgba(0,0,0,.22);
       transition: transform .08s ease, filter .2s ease;
       flex: 0 0 auto;
     }
-    .btn:hover{ filter: brightness(1.05); }
+
+    .btn:hover{ filter: brightness(1.03); }
     .btn:active{ transform: translateY(1px); }
   </style>
 </head>
@@ -221,6 +295,12 @@
         <span class="dot" aria-hidden="true">●</span>
         <span class="t2">LAUDOS</span>
       </h1>
+
+      <!-- ✅ CARD DISCRETO -->
+      <div class="devCard">
+        <div class="nome">MARCOS PONTES</div>
+        <div class="cargo">DESENVOLVEDOR</div>
+      </div>
     </header>
 
     <main>
@@ -252,6 +332,7 @@
     const LAUDO_URL = "laudo.html";
     const $ = (id)=>document.getElementById(id);
 
+    // ✅ mapa fixo: sigla -> nome completo
     const MAPA_RESP = {
       "EAM": "EDVÂNIA APARECIDA MENDES DE AZEVÊDO",
       "SNM": "SHEINA N. MORAIS RAMALHO"
@@ -310,6 +391,7 @@
         if(/^cidade\s*:/i.test(ln)){ cidade = ln.replace(/^cidade\s*:\s*/i, "").trim(); continue; }
         if(/^cep\s*:/i.test(ln)){ cep = ln.replace(/^cep\s*:\s*/i, "").trim(); continue; }
 
+        // ✅ digita só a sigla -> vira nome completo automaticamente
         if(/^(EAM|SNM)$/i.test(ln)){
           const sigla = ln.toUpperCase().trim();
           responsavel = MAPA_RESP[sigla] || sigla;
