--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       --azul2:#06233f;
 
       --stroke: rgba(255,255,255,.22);
-      --shadow: 0 22px 62px rgba(0,0,0,.26);
-      --shadow2: 0 14px 30px rgba(0,0,0,.20);
+      --shadow: 0 20px 54px rgba(0,0,0,.24);
+      --shadow2: 0 12px 28px rgba(0,0,0,.18);
     }
 
     *{ box-sizing:border-box; }
@@ -28,43 +28,34 @@
     }
 
     /* ===========================
-       FUNDO PROFISSIONAL + LOGOTIPO CORRETO
+       FUNDO + MARCA D’ÁGUA
        =========================== */
     body{
       font-family: Arial, sans-serif;
-      color: #fff;
+      color:#fff;
       background: linear-gradient(135deg, #69ff9f 0%, #2be28d 18%, #0e4d7d 65%, #06233f 100%);
       position: relative;
     }
 
-    /* ✅ FUNDO USANDO A IMAGEM DA PASTA /logotipo */
     body::before{
       content:"";
-      position: absolute;
-      inset: 0;
-
-      /* ✅ TROQUE AQUI PELO NOME REAL DO ARQUIVO SE FOR DIFERENTE */
-      background: url("logotipo/logotipo.png") center 58% / 860px no-repeat;
-
-      /* ✅ mais visível */
+      position:absolute;
+      inset:0;
+      background: url("logotipo/logotipo.png") center 55% / 780px no-repeat;
       opacity: 0.23;
-
       pointer-events:none;
       z-index:0;
-
-      /* ✅ dá definição / aspecto profissional */
       filter: contrast(1.25) brightness(1.08);
       mix-blend-mode: screen;
     }
 
-    /* ✅ Camada extra para profundidade premium */
     body::after{
       content:"";
       position:absolute;
       inset:0;
       background:
-        radial-gradient(circle at 15% 20%, rgba(255,255,255,.18), transparent 40%),
-        radial-gradient(circle at 85% 75%, rgba(115,255,154,.10), transparent 38%),
+        radial-gradient(circle at 15% 20%, rgba(255,255,255,.16), transparent 42%),
+        radial-gradient(circle at 85% 75%, rgba(115,255,154,.10), transparent 42%),
         linear-gradient(180deg, rgba(0,0,0,.25), rgba(0,0,0,.28));
       pointer-events:none;
       z-index:0;
@@ -73,109 +64,99 @@
     header, main{ position:relative; z-index:1; }
 
     .screen{
-      width: 100%;
-      height: 100%;
-      padding: 22px 34px;
+      width:100%;
+      height:100%;
+      padding: 16px 26px;     /* ✅ menor */
       display:flex;
       flex-direction:column;
-      gap: 12px;
+      gap: 10px;              /* ✅ menor */
     }
 
     /* ===========================
-       HEADER
+       HEADER MAIS COMPACTO
        =========================== */
     header{
-      flex: 0 0 auto;
+      flex:0 0 auto;
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:16px;
-      padding-bottom: 6px;
+      gap:14px;
+      padding-bottom: 2px;
     }
 
-    /* título branco */
     .sysOnly{
       margin:0;
       display:flex;
       align-items:baseline;
-      gap:12px;
+      gap:10px;
       flex-wrap:wrap;
-
-      font-weight:900;
-      letter-spacing:.9px;
-      text-transform:uppercase;
-
+      font-weight: 900;
+      letter-spacing: .9px;
+      text-transform: uppercase;
       color:#fff;
-      text-shadow: 0 18px 38px rgba(0,0,0,.35);
+      text-shadow: 0 14px 34px rgba(0,0,0,.32);
     }
 
-    .sysOnly .t1{ font-size: 28px; }
+    .sysOnly .t1{ font-size: 26px; } /* ✅ menor */
     .sysOnly .dot{
-      font-size: 22px;
+      font-size: 18px;
       opacity: .85;
       transform: translateY(-2px);
     }
     .sysOnly .t2{
-      font-size: 30px;
-      padding: 4px 12px;
+      font-size: 26px;
+      padding: 3px 12px;      /* ✅ menor */
       border-radius: 999px;
       background: rgba(255,255,255,.14);
       border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 14px 28px rgba(0,0,0,.18);
+      box-shadow: 0 12px 24px rgba(0,0,0,.16);
     }
 
-    /* ===========================
-       CARD DEV
-       =========================== */
     .devCard{
       display:flex;
       flex-direction:column;
       align-items:flex-end;
       gap:2px;
-
-      padding: 10px 14px;
+      padding: 8px 12px;      /* ✅ menor */
       border-radius: 16px;
-
       background: rgba(255,255,255,.12);
-      border: 1px solid rgba(255,255,255,.22);
+      border: 1px solid rgba(255,255,255,.20);
       backdrop-filter: blur(10px);
       -webkit-backdrop-filter: blur(10px);
-
-      box-shadow: 0 18px 38px rgba(0,0,0,.22);
+      box-shadow: 0 16px 32px rgba(0,0,0,.18);
       user-select:none;
     }
-
     .devCard .nome{
-      font-size: 13px;
+      font-size: 12px;        /* ✅ menor */
       font-weight: 900;
       letter-spacing: .8px;
       color:#fff;
       text-transform:uppercase;
     }
-
     .devCard .cargo{
-      font-size: 11px;
-      font-weight: 700;
+      font-size: 10px;
+      font-weight: 800;
       letter-spacing: .8px;
       color: rgba(255,255,255,.80);
       text-transform:uppercase;
     }
 
+    /* ===========================
+       CARD PRINCIPAL MENOR
+       =========================== */
     main{
       flex: 1 1 auto;
       display:flex;
-      align-items:center;
+      align-items:flex-start;   /* ✅ sobe o card */
       justify-content:center;
       min-height: 0;
+      padding-top: 6px;
     }
 
-    /* ===========================
-       CARD PRINCIPAL (GLASS)
-       =========================== */
     .glass{
-      width: 980px;
-      height: 740px;
-      border-radius: 34px;
+      width: min(980px, 100%);
+      height: 560px;            /* ✅ MUITO menor (antes era 740+) */
+      border-radius: 30px;
       border: 1px solid var(--stroke);
       background: linear-gradient(180deg, rgba(255,255,255,.14), rgba(255,255,255,.06));
       box-shadow: var(--shadow);
@@ -188,35 +169,35 @@
     .panel{
       width:100%;
       height:100%;
-      padding: 26px;
+      padding: 18px 20px;       /* ✅ menor */
       display:flex;
       flex-direction:column;
-      gap: 16px;
+      gap: 12px;                /* ✅ menor */
     }
 
     .panelTitle{
       margin:0;
-      font-size: 30px;
+      font-size: 28px;          /* ✅ menor */
       font-weight: 900;
       letter-spacing: 1px;
       text-transform: uppercase;
       color:#fff;
-      text-shadow: 0 12px 28px rgba(0,0,0,.35);
+      text-shadow: 0 10px 24px rgba(0,0,0,.30);
     }
 
     /* ===========================
-       GUIA
+       LINHA DE GUIA MAIS FINA
        =========================== */
     .guideLine{
-      padding: 14px 16px;
-      border-radius: 20px;
-      border: 1px solid rgba(255,255,255,.18);
+      padding: 10px 12px;       /* ✅ menor */
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.16);
       background: rgba(255,255,255,.10);
       box-shadow: var(--shadow2);
       display:flex;
       align-items:center;
       flex-wrap:wrap;
-      gap: 12px;
+      gap: 10px;                /* ✅ menor */
       font-weight: 900;
       color: rgba(255,255,255,.92);
       letter-spacing: .7px;
@@ -224,69 +205,82 @@
     }
 
     .guideLine .tag{
-      padding: 7px 12px;
+      padding: 6px 11px;        /* ✅ menor */
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,.16);
+      border: 1px solid rgba(255,255,255,.14);
       background: rgba(0,0,0,.12);
-      box-shadow: 0 10px 20px rgba(0,0,0,.08);
+      box-shadow: 0 8px 16px rgba(0,0,0,.08);
       white-space: nowrap;
       color:#fff;
+      font-size: 14px;          /* ✅ menor */
     }
 
     .guideLine .sep{
-      opacity: .55;
-      font-weight: 900;
+      opacity:.55;
+      font-weight:900;
       color: rgba(255,255,255,.75);
     }
 
     /* ===========================
-       TEXTAREA MENOR
+       TEXTAREA COMPACTO
        =========================== */
     textarea{
       width:100%;
-      flex: 0 0 auto;
-      height: 240px;
-      min-height: 240px;
+      flex: 1 1 auto;           /* ✅ ocupa só o necessário */
+      min-height: 150px;        /* ✅ reduzido */
+      height: 180px;            /* ✅ menor */
+      resize:none;
+      border-radius: 20px;
+      border: 1px solid rgba(255,255,255,.20);
 
-      resize: none;
-      border-radius: 22px;
-      border: 1px solid rgba(255,255,255,.22);
+      background: rgba(0,0,0,.16);
+      box-shadow: 0 14px 26px rgba(0,0,0,.16);
 
-      background: rgba(0,0,0,.18);
-      box-shadow: 0 16px 32px rgba(0,0,0,.18);
-
-      padding: 18px;
+      padding: 16px;
       outline:none;
-      font-size: 17px;
-      color: #fff;
+      font-size: 16px;
+      color:#fff;
       line-height: 1.35;
-      overflow: auto;
+      overflow:auto;
     }
-
     textarea::placeholder{ color: rgba(255,255,255,.65); }
 
     /* ===========================
-       BOTÃO
+       BOTÃO MENOR E ELEGANTE
        =========================== */
     .btn{
       width:100%;
       border:none;
-      border-radius: 22px;
-      padding: 18px 18px;
+      border-radius: 20px;
+      padding: 14px 16px;       /* ✅ menor */
       cursor:pointer;
-      font-size: 22px;
+      font-size: 20px;          /* ✅ menor */
       font-weight: 900;
       letter-spacing: .3px;
       color:#041b2f;
-
       background: linear-gradient(90deg, #00e09c, #1376b8);
-      box-shadow: 0 22px 42px rgba(0,0,0,.22);
+      box-shadow: 0 18px 34px rgba(0,0,0,.20);
       transition: transform .08s ease, filter .2s ease;
       flex: 0 0 auto;
     }
-
     .btn:hover{ filter: brightness(1.03); }
     .btn:active{ transform: translateY(1px); }
+
+    /* ===========================
+       RESPONSIVO
+       =========================== */
+    @media (max-width: 1100px){
+      .glass{ height: 540px; }
+      .sysOnly .t1{ font-size: 22px; }
+      .sysOnly .t2{ font-size: 22px; }
+    }
+
+    @media (max-width: 860px){
+      .screen{ padding: 12px 14px; }
+      header{ flex-direction:column; align-items:flex-start; gap:10px; }
+      .devCard{ align-items:flex-start; }
+      .glass{ height: 520px; }
+    }
   </style>
 </head>
 
@@ -440,7 +434,6 @@
       if(dados.observacao)      params.set("observacao", dados.observacao);
 
       params.set("return", window.location.href);
-
       window.location.assign(`${LAUDO_URL}?${params.toString()}`);
     }
 
