--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
       --azul1:#0e4d7d;
       --azul2:#06233f;
 
-      --stroke: rgba(255,255,255,.22);
-      --shadow: 0 20px 54px rgba(0,0,0,.24);
-      --shadow2: 0 12px 28px rgba(0,0,0,.18);
+      --stroke: rgba(255,255,255,.20);
+      --shadow: 0 16px 44px rgba(0,0,0,.22);
+      --shadow2: 0 10px 22px rgba(0,0,0,.16);
     }
 
     *{ box-sizing:border-box; }
@@ -41,8 +41,8 @@
       content:"";
       position:absolute;
       inset:0;
-      background: url("logotipo/logotipo.png") center 55% / 780px no-repeat;
-      opacity: 0.23;
+      background: url("logotipo/logotipo.png") center 55% / 720px no-repeat;
+      opacity: 0.24;
       pointer-events:none;
       z-index:0;
       filter: contrast(1.25) brightness(1.08);
@@ -54,9 +54,9 @@
       position:absolute;
       inset:0;
       background:
-        radial-gradient(circle at 15% 20%, rgba(255,255,255,.16), transparent 42%),
-        radial-gradient(circle at 85% 75%, rgba(115,255,154,.10), transparent 42%),
-        linear-gradient(180deg, rgba(0,0,0,.25), rgba(0,0,0,.28));
+        radial-gradient(circle at 15% 20%, rgba(255,255,255,.14), transparent 44%),
+        radial-gradient(circle at 85% 75%, rgba(115,255,154,.09), transparent 44%),
+        linear-gradient(180deg, rgba(0,0,0,.28), rgba(0,0,0,.30));
       pointer-events:none;
       z-index:0;
     }
@@ -66,22 +66,22 @@
     .screen{
       width:100%;
       height:100%;
-      padding: 16px 26px;     /* ✅ menor */
+      padding: 12px 22px; /* ✅ menor */
       display:flex;
       flex-direction:column;
-      gap: 10px;              /* ✅ menor */
+      gap: 8px;           /* ✅ menor */
     }
 
     /* ===========================
-       HEADER MAIS COMPACTO
+       HEADER (BEM COMPACTO)
        =========================== */
     header{
       flex:0 0 auto;
       display:flex;
       align-items:center;
       justify-content:space-between;
-      gap:14px;
-      padding-bottom: 2px;
+      gap:10px;
+      padding-bottom: 0px;
     }
 
     .sysOnly{
@@ -90,44 +90,54 @@
       align-items:baseline;
       gap:10px;
       flex-wrap:wrap;
-      font-weight: 900;
-      letter-spacing: .9px;
-      text-transform: uppercase;
+      font-weight:900;
+      letter-spacing:.9px;
+      text-transform:uppercase;
       color:#fff;
-      text-shadow: 0 14px 34px rgba(0,0,0,.32);
+      text-shadow: 0 12px 28px rgba(0,0,0,.32);
     }
 
-    .sysOnly .t1{ font-size: 26px; } /* ✅ menor */
+    .sysOnly .t1{ font-size: 22px; } /* ✅ menor */
     .sysOnly .dot{
-      font-size: 18px;
-      opacity: .85;
-      transform: translateY(-2px);
+      font-size: 16px;
+      opacity: .82;
+      transform: translateY(-1px);
     }
     .sysOnly .t2{
-      font-size: 26px;
-      padding: 3px 12px;      /* ✅ menor */
+      font-size: 22px;
+      padding: 3px 12px;
       border-radius: 999px;
       background: rgba(255,255,255,.14);
-      border: 1px solid rgba(255,255,255,.18);
-      box-shadow: 0 12px 24px rgba(0,0,0,.16);
+      border: 1px solid rgba(255,255,255,.16);
+      box-shadow: 0 10px 20px rgba(0,0,0,.14);
     }
 
+    /* ===========================
+       ✅ DEV CARD SEM "SOMBRA TRANSPARENTE"
+       (sem backdrop-filter)
+       =========================== */
     .devCard{
       display:flex;
       flex-direction:column;
       align-items:flex-end;
       gap:2px;
-      padding: 8px 12px;      /* ✅ menor */
-      border-radius: 16px;
-      background: rgba(255,255,255,.12);
-      border: 1px solid rgba(255,255,255,.20);
-      backdrop-filter: blur(10px);
-      -webkit-backdrop-filter: blur(10px);
-      box-shadow: 0 16px 32px rgba(0,0,0,.18);
-      user-select:none;
+
+      padding: 7px 12px;
+      border-radius: 14px;
+
+      /* ✅ fundo sólido para não criar reflexo/ghost */
+      background: rgba(6, 35, 63, 0.85);
+
+      border: 1px solid rgba(255,255,255,.18);
+      box-shadow: 0 10px 20px rgba(0,0,0,.18);
+
+      /* ✅ remove qualquer efeito fantasma */
+      backdrop-filter: none !important;
+      -webkit-backdrop-filter: none !important;
     }
+
     .devCard .nome{
-      font-size: 12px;        /* ✅ menor */
+      font-size: 11px;
       font-weight: 900;
       letter-spacing: .8px;
       color:#fff;
@@ -137,28 +147,28 @@
       font-size: 10px;
       font-weight: 800;
       letter-spacing: .8px;
-      color: rgba(255,255,255,.80);
+      color: rgba(255,255,255,.78);
       text-transform:uppercase;
     }
 
     /* ===========================
-       CARD PRINCIPAL MENOR
+       CARD PRINCIPAL BEM MENOR
        =========================== */
     main{
       flex: 1 1 auto;
       display:flex;
-      align-items:flex-start;   /* ✅ sobe o card */
+      align-items:flex-start;
       justify-content:center;
       min-height: 0;
-      padding-top: 6px;
+      padding-top: 4px;
     }
 
     .glass{
-      width: min(980px, 100%);
-      height: 560px;            /* ✅ MUITO menor (antes era 740+) */
-      border-radius: 30px;
+      width: min(960px, 100%);
+      height: 460px;        /* ✅ bem menor */
+      border-radius: 26px;
       border: 1px solid var(--stroke);
-      background: linear-gradient(180deg, rgba(255,255,255,.14), rgba(255,255,255,.06));
+      background: linear-gradient(180deg, rgba(255,255,255,.13), rgba(255,255,255,.06));
       box-shadow: var(--shadow);
       backdrop-filter: blur(14px);
       -webkit-backdrop-filter: blur(14px);
@@ -169,15 +179,15 @@
     .panel{
       width:100%;
       height:100%;
-      padding: 18px 20px;       /* ✅ menor */
+      padding: 16px 18px;  /* ✅ menor */
       display:flex;
       flex-direction:column;
-      gap: 12px;                /* ✅ menor */
+      gap: 10px;           /* ✅ menor */
     }
 
     .panelTitle{
       margin:0;
-      font-size: 28px;          /* ✅ menor */
+      font-size: 22px;     /* ✅ menor */
       font-weight: 900;
       letter-spacing: 1px;
       text-transform: uppercase;
@@ -186,18 +196,18 @@
     }
 
     /* ===========================
-       LINHA DE GUIA MAIS FINA
+       GUIA MAIS FINO
        =========================== */
     .guideLine{
-      padding: 10px 12px;       /* ✅ menor */
-      border-radius: 18px;
-      border: 1px solid rgba(255,255,255,.16);
-      background: rgba(255,255,255,.10);
+      padding: 9px 11px;
+      border-radius: 16px;
+      border: 1px solid rgba(255,255,255,.14);
+      background: rgba(255,255,255,.09);
       box-shadow: var(--shadow2);
       display:flex;
       align-items:center;
       flex-wrap:wrap;
-      gap: 10px;                /* ✅ menor */
+      gap: 8px;
       font-weight: 900;
       color: rgba(255,255,255,.92);
       letter-spacing: .7px;
@@ -205,14 +215,14 @@
     }
 
     .guideLine .tag{
-      padding: 6px 11px;        /* ✅ menor */
+      padding: 5px 10px;
       border-radius: 999px;
-      border: 1px solid rgba(255,255,255,.14);
+      border: 1px solid rgba(255,255,255,.12);
       background: rgba(0,0,0,.12);
-      box-shadow: 0 8px 16px rgba(0,0,0,.08);
+      box-shadow: 0 6px 12px rgba(0,0,0,.08);
       white-space: nowrap;
       color:#fff;
-      font-size: 14px;          /* ✅ menor */
+      font-size: 13px;
     }
 
     .guideLine .sep{
@@ -222,44 +232,45 @@
     }
 
     /* ===========================
-       TEXTAREA COMPACTO
+       TEXTAREA MAIS MENOR
        =========================== */
     textarea{
       width:100%;
-      flex: 1 1 auto;           /* ✅ ocupa só o necessário */
-      min-height: 150px;        /* ✅ reduzido */
-      height: 180px;            /* ✅ menor */
+      flex: 1 1 auto;
+      height: 140px;      /* ✅ menor */
+      min-height: 120px;  /* ✅ menor */
+
       resize:none;
-      border-radius: 20px;
-      border: 1px solid rgba(255,255,255,.20);
+      border-radius: 18px;
+      border: 1px solid rgba(255,255,255,.18);
 
       background: rgba(0,0,0,.16);
-      box-shadow: 0 14px 26px rgba(0,0,0,.16);
+      box-shadow: 0 12px 22px rgba(0,0,0,.14);
 
-      padding: 16px;
+      padding: 14px;
       outline:none;
-      font-size: 16px;
+      font-size: 15px;
       color:#fff;
       line-height: 1.35;
       overflow:auto;
     }
-    textarea::placeholder{ color: rgba(255,255,255,.65); }
+    textarea::placeholder{ color: rgba(255,255,255,.64); }
 
     /* ===========================
-       BOTÃO MENOR E ELEGANTE
+       BOTÃO MAIS FINO
        =========================== */
     .btn{
       width:100%;
       border:none;
-      border-radius: 20px;
-      padding: 14px 16px;       /* ✅ menor */
+      border-radius: 18px;
+      padding: 12px 14px;   /* ✅ menor */
       cursor:pointer;
-      font-size: 20px;          /* ✅ menor */
+      font-size: 18px;      /* ✅ menor */
       font-weight: 900;
       letter-spacing: .3px;
       color:#041b2f;
       background: linear-gradient(90deg, #00e09c, #1376b8);
-      box-shadow: 0 18px 34px rgba(0,0,0,.20);
+      box-shadow: 0 16px 26px rgba(0,0,0,.18);
       transition: transform .08s ease, filter .2s ease;
       flex: 0 0 auto;
     }
@@ -269,16 +280,14 @@
     /* ===========================
        RESPONSIVO
        =========================== */
-    @media (max-width: 1100px){
-      .glass{ height: 540px; }
-      .sysOnly .t1{ font-size: 22px; }
-      .sysOnly .t2{ font-size: 22px; }
+    @media (max-width: 920px){
+      header{ flex-direction:column; align-items:flex-start; gap:8px; }
+      .devCard{ align-items:flex-start; }
+      .glass{ height: 470px; }
     }
 
-    @media (max-width: 860px){
-      .screen{ padding: 12px 14px; }
-      header{ flex-direction:column; align-items:flex-start; gap:10px; }
-      .devCard{ align-items:flex-start; }
+    @media (max-width: 520px){
+      .screen{ padding: 10px 12px; }
       .glass{ height: 520px; }
     }
   </style>
